add new fields, and fix select in Moz

--- a/dev/sass/_media.sass
+++ b/dev/sass/_media.sass
@@ -119,4 +119,9 @@
 		&__60
 			width: calc(55% - 5px)
 
+	select.popup-form__input option
+		min-height: 34px
+		font-size: 16px
+		line-height: 34px
+
 
