--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -12,6 +12,10 @@ body
 	background-position: bottom
 	background-repeat: no-repeat
 
+html.hide-scroll,
+body.hide-scroll
+  overflow: hidden
+
 .wrapper
 	margin: 0 auto
 	padding: 40px 20px
@@ -292,7 +296,8 @@ body
 		font-weight: 600
 		color: $darkGray
 	&__add-text
-		margin: 0
+		display: block
+		margin: 0 0 15px !important
 		font-size: 14px
 		line-height: 30px
 		font-style: italic
@@ -302,6 +307,17 @@ body
 		font-size: 16px
 		line-height: 30px
 		color: #ff0000
+	&__info-text
+		margin: 0
+		font-size: 16px
+		line-height: 30px
+		font-weight: 700
+		color: $darkGray
+
+select.popup-form__input option
+	min-height: 42px
+	font-size: 16px
+	line-height: 42px
 
 .tabs-nav
 	display: flex
